[package]
name = "voitaku"
version = "0.1.0"
edition = "2021"

[dependencies]
ac-ffmpeg = "0.18.1"
anyhow = "1.0.86"
axum = { version = "0.7.5", features = ["ws"] }
base64 = "0.22.1"
crypto_secretbox = { version = "0.1.1", features = ["heapless", "std"] }
dotenvy = "0.15.7"
futures-util = "0.3.30"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["full"] }
tokio-tungstenite = { version = "0.23.0", features = ["native-tls"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["local-time", "env-filter"] }
